[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "reflex-altair"
dynamic = ["version"]
description = "Reflex custom component to render altair/vega"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Leopold Grosjean", email = "leo.grosjean@gmail.com" }]
keywords = ["reflex", "reflex-custom-components", "altair", "vega"]
dependencies = ["reflex>=0.7.11"]
classifiers = ["Development Status :: 4 - Beta"]


[project.urls]
homepage = "https://github.com/LeoGrosjean/reflex-graphing/tree/main/altair"
source = "https://github.com/LeoGrosjean/reflex-graphing/tree/main/altair"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
metadata = false

[tool.hatch.build.targets.wheel]
packages = ["custom_components"]

[dependency-groups]
dev = [
    "build",
    "twine",
    "pytest",
    "ruff"
]
