[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "reflex-pyplot"
dynamic = ["version"]
description = "Reflex custom component for matplotlib."
authors = [{ name = "Alek Petuskey", email = "alek@reflex.dev" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
readme = "README.md"
keywords = ["reflex", "matplotlib"]
dependencies = ["matplotlib"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
metadata = false
pattern-prefix = "pyplot-"

[tool.hatch.build.targets.wheel]
only-include = ["custom_components/reflex_pyplot"]
sources = ["custom_components"]

[project.urls]
homepage = "https://reflex.dev"
source = "https://github.com/reflex-dev/reflex-graphing/tree/main/pyplot"

[dependency-groups]
dev = [
    "build",
    "twine",
    "pytest",
    "ruff"
]

[tool.ruff]
target-version = "py310"
